# satellite-detumble

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/rotation/: simulation.hpp  ui.hpp
include/satellite-detumble/: simulation.hpp  ui.hpp
src/: main.cpp  simulation.cpp  ui.cpp
